# adk-seq-webagent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini
agents/code_writer/: agent.py  description.txt  instructions.txt
agents/designer/: agent.py  description.txt  instructions.txt
agents/parallel_research/: agent.py  description.txt  instructions.txt
agents/query_generator/: agent.py  description.txt  instructions.txt
agents/question_generator/: agent.py  description.txt  instructions.txt
agents/requirements_writer/: agent.py  description.txt  instructions.txt
agents/root_website_builder/: agent.py
tests/: test_git_operations_tool.py
tools/: file_writer_tool.py  git_operations_tool.py  github_ops_tool.py
